--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,11 +1,5 @@
 <div class="face-snap-card" [ngClass]="{snapped: buttonText === 'Oops, unSnap !'}">
     <h2>{{ faceSnap.title | uppercase }}</h2>
-    <p>Mis en ligne {{ faceSnap.createdDate | date: 'le d MMMM yyyy à HH:mm' }}</p>
-    <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
-    <p *ngIf="faceSnap.location">Photo prise à {{ faceSnap.location }}</p>
     <p>{{ faceSnap.description }}</p>
-    <p>
-        <button (click)="onSnap()">{{ buttonText }}</button>
-        <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ', 0)' }">{{ faceSnap.snaps }}</span>
-    </p>
+    <button (click)="onViewFaceSnap()">VIEW</button>
 </div>
